[tool.poetry]
name = "spotify-cleaner"
version = "0.1.0"
description = ""
authors = ["wangonya <kwangonya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.08"
bottle = "^0.12.25"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
